# neural-network-cpp

./: CMakeLists.txt
include/: ILayer.cpp
include/core/: ActivationFunctions.hpp  CostFunctions.cpp  ILayer.hpp  INeuralNetwork.hpp
include/layers/: SeqDenseLayer.hpp
include/nnet/: SeqNN.hpp
src/: main.cpp
src/examples/: XOR.cpp
src/layers/: SeqDenseLayer.cpp
src/nnet/: SeqNN.cpp
